--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="resume">
           <div class="container">
             <div class="resume__block">
-              <h1 class="contact-info__header">John Doe</h1>
-              <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
+              <h1 class="contact-info__header">Duma Svyatoslav </h1>
+              <h3 class="contact-info__sub-header">Trainee QA Engineer</h3>
       
               <div class="contact_info_container fh">
                 <div class="contact-info__block"></div>
@@ -49,12 +49,12 @@
                   <h3 class="experiences__header">Experience</h3>
                   <div class="experiences__company">
                     <div class="experiences__company-header">
-                      <span class="experiences__company-header-durability">2005-Present</span>
+                      <span class="experiences__company-header-durability">2022-Present</span>
                       <h3 class="experiences__company-header-name">Binary Studio</h3>
                     </div>
           
                     <div class="experiences__company-project">
-                      <span class="experiences__company-project-role">Full-Stack Developer</span>
+                      <span class="experiences__company-project-role">Trainee QA Engineer</span>
                       <h3 class="experiences__company-project-name">Hooman project</h3>
                       <ul class="experiences__company-project-responsibilities">
                         <li>Backend Architecture</li>
@@ -72,7 +72,7 @@
                     <div class="additional-info__education-university">
                       <span class="additional-info__education-university-durability">2021</span>
                       <h3 class="additional-info__education-university-speciality">
-                        Full-Stack Development
+                      QA Engineer
                       </h3>
                       <p class="additional-info__education-university-name">
                         Binary Studio Academy
